--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,13 +5,10 @@ dependencies:
 #  - { role: alban.andrieu.common }
 #  - { role: alban.andrieu.hostname }
 #  - { role: geerlingguy.ntp }
-#  - { role: geerlingguy.phpmyadmin }
 #  - { role: alban.andrieu.pagespeed }
 
-#  - { role: geerlingguy.apache }
-#  - { role: geerlingguy.mysql }
-#  - { role: geerlingguy.php-mysql }
-#  - { role: geerlingguy.php }
+  - { role: geerlingguy.apache }
+  - { role: geerlingguy.php }
 
 galaxy_info:
   author: Alban Andrieu
