--- a/meta/ansigenome.yml
+++ b/meta/ansigenome.yml
@@ -1,3 +1,33 @@
+---
+#dependencies: []
+dependencies:
+  - { role: virtualbox }
+#  - { role: alban.andrieu.common }
+#  - { role: alban.andrieu.hostname }
+#  - { role: geerlingguy.ntp }
+#  - { role: alban.andrieu.pagespeed }
+  - { role: geerlingguy.apache }
+  - { role: geerlingguy.php }
+
+galaxy_info:
+  author: Alban Andrieu
+  description: A role for installing phpvirtualbox
+  company: Nabla
+  license: GPLv3
+  min_ansible_version: 2.1.1
+  platforms:
+  - name: EL
+    versions:
+    - 6
+  - name: Debian
+    versions:
+    - all
+  - name: Ubuntu
+    versions:
+    - all
+  categories:
+    - development
+    - web
 
 ansigenome_info:
   galaxy_id: '3630'
