--- a/meta/ansigenome.yml
+++ b/meta/ansigenome.yml
@@ -13,8 +13,8 @@ galaxy_info:
   author: Alban Andrieu
   description: A role for installing phpvirtualbox
   company: Nabla
-  license: GPLv3
-  min_ansible_version: 2.1.1
+  license: Apache
+  min_ansible_version: 2.3.0.0
   platforms:
   - name: EL
     versions:
